# NeuroX

./:  neuron.rs  Cargo.toml  Dockerfile  activation.rs  build.rs  database.rs  docker-compose.yaml  main.rs  messenger_api_client.rs  readme.md  supervisoer.rs  telegram_bot.rs  weight_init.rs
extensions/: eye_ext.rs  messenger_ext.rs  webhook_ext.rs
k8s/test/: neuron.yaml  supervisor.yaml
proto/: mod.rs
tests/: integration_tests.rs  neuron_tests.rs
