# Cargo.toml
[package]
name = "neurox"
version = "0.11.0"
authors = ["Lab for Advanced Study"]
edition = "2018"

[dependencies]
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
log = "0.4"
env_logger = "0.8"
thiserror = "1.0"
rocksdb = "0.15"
telegram-bot = "0.7"

[build-dependencies]
tonic-build = "0.4"